# ship

./: AbstractAlgorithm.h  AlgorithmFactoryRegistrar.cpp  AlgorithmFactoryRegistrar.h  AlgorithmRegistration.cpp  CMakeLists.txt  Common.cpp  Common.h  ErroneousAlgorithm.h  Error.cpp  Error.h  ErrorsInterface.h  LifoAlgorithm.cpp  LifoAlgorithm.h  OutPutHandler.cpp  OutPutHandler.h  Parser.cpp  Parser.h  README.md  Ship.cpp  Ship.h  Ship.vcxproj  Ship.vcxproj.filters  SimulatorObj.cpp  SimulatorObj.h  UnsortedLifoAlgorithm.cpp  UnsortedLifoAlgorithm.h  Unsorted_Lifo_Algorithm.cpp  Unsorted_Lifo_Algorithm.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  common.cpp  common.h  container.cpp  container.h  erroneous_algorithm.cpp  erroneous_algorithm.h  lifo_algorithm.cpp  lifo_algorithm.h  main.cpp  makefile  (+9 more)
Algorithm/: LifoAlgorithm.cpp  LifoAlgorithm.h  UnsortedLifoAlgorithm.cpp  UnsortedLifoAlgorithm.h
Common/: Common.cpp  Common.h  Container.cpp  Container.h  Parser.cpp  Parser.h  Port.cpp  Port.h  Ship.h
Debug/: vc142.idb
Debug/ex1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ex1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Interface/: AlgorithmRegistration.cpp  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
Simulator/: AlgorithmFactoryRegistrar.cpp  AlgorithmFactoryRegistrar.h  SimulatorObj.cpp  SimulatorObj.h
algorithm/: _313263204_a.cpp  _313263204_a.h  _313263204_b.cpp  _313263204_b.h  makefile
common/: Common.cpp  Common.h  Container.cpp  Container.h  Parser.cpp  Parser.h  Port.cpp  Port.h  Ship.cpp  Ship.h  WeightBalanceCalculator.cpp
directoryTest/: list of valid id's.txt
directoryTest/Travel1/: AC BBC_2-OUTPUT.txt  AT TTE_4.txt  AZ ABC_2.txt  ship_route.txt
directoryTest/example1/Travel1/: AC BBC_1.txt  AC BBC_3.txt  ship_plan.txt
directoryTest/example1/Travel3/: AT TTE_4.txt  AZ ABC_2.txt
directoryTest/example2/: simulation.errors  simulation.results
directoryTest/example2/Travel1/: ATTTX_1.cargo_data  XYZWX_1.cargo_data  plan.ship_plan  route.ship_route
directoryTest/example2/Travel2/: BBBBB_1.cargo_data  OOOOO_1.cargo_data  plan.ship_plan  route.ship_route
directoryTest/example2/Travel_long/Travel2/: TTTTT_1.cargo_data
directoryTest/example4/Travel_test/: plan.ship_plan  route.route
directoryTest/output/Travel1Out/: Lifo_algorithm- AC BBC_1.txt  Lifo_algorithm- AC BBC_3.txt  Lifo_algorithm- AT TTE_4.txt  Lifo_algorithm- AZ ABC_2.txt
directoryTest/output/_313263204_a_Travel1_crane_instructions/: ATTTX_1.crane_instructions
directoryTest/output/_313263204_a_Travel2_crane_instructions/: BBBBB_1.crane_instructions  OOOOO_1.crane_instructions  OOOOO_2.crane_instructions  TTTTT_1.crane_instructions
directoryTest/output/_313263204_b_Travel1_crane_instructions/: ATTTX_1.crane_instructions  PRPPP_1.crane_instructions  XXXXX_1.crane_instructions  XYZWX_1.crane_instructions
directoryTest/output/_313263204_b_Travel2_crane_instructions/: BBBBB_1.crane_instructions  OOOOO_1.crane_instructions  OOOOO_2.crane_instructions  TTTTT_1.crane_instructions
interfaces/: AbstractAlgorithm.h  ErrorsInterface.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
simulator/: AlgorithmFactoryRegistrar.cpp  AlgorithmFactoryRegistrar.h  AlgorithmRegistration.cpp  SimulatorObj.cpp  SimulatorObj.h  SimulatorValidation.cpp  SimulatorValidation.h  TaskProducer.cpp  TaskProducer.h  ThreadPoolExecuter.cpp  ThreadPoolExecuter.h  Travel.cpp  Travel.h  Util.cpp  Util.h  main.cpp  makefile
